--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "devDependencies": {
     "enzyme": "^2.8.2",
     "enzyme-to-json": "^1.5.1",
+    "node-sass-chokidar": "0.0.2",
+    "npm-run-all": "^4.0.2",
     "react-scripts": "1.0.7",
     "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
